fixed alignment issues + cool icon

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-/* Generic Styling */
+/* generic styling */
+
 html {
     font-family:
         system-ui,
@@ -7,9 +8,8 @@ html {
     color: black;
     background-color: #466060;
     display: flex;
-    flex-direction: columns;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
 }
 body {
     width: max-content;
@@ -37,7 +37,7 @@ a {
 a:hover {
     color: whitesmoke;
 }
-/* General Utility Classes */
+/* general utility classes */
 *[heading1] {
     font-size: clamp(1.5rem, 5vw, 3rem);
 }
@@ -59,7 +59,6 @@ a:hover {
 *[p-3] {
     padding: clamp(1.5rem, 6vw, 3rem);
 }
-
 *[gap-05] {
     gap: 0.5rem;
 }
@@ -118,6 +117,7 @@ a:hover {
 *[vertical] {
     display: flex;
     flex-direction: column;
+    height: auto;
 }
 *[center] {
     display: flex;
@@ -148,6 +148,9 @@ a:hover {
 *[font-medium] {
     font-weight: 500;
 }
+*[font-regular] {
+    font-weight: 400;
+}
 *[font-light] {
     font-weight: 300;
 }
@@ -157,30 +160,32 @@ a:hover {
 *[white] {
     color: whitesmoke;
 }
-
-/*Specific Styling*/
-
+/*specific styling*/
 .profile-pic {
     width: 3rem;
 }
-
 .divider {
     align-self: stretch;
     width: 1px;
     opacity: 0.3;
     background-color: black;
 }
-
 about-me {
-    align-items: stretch;
+    align-items: flex-start;
 }
-
 projects-experience {
-    margin-left: 1rem;
+    align-items: flex-start;
 }
 heading-experience {
     font-size: 1.5rem;
 }
 roles-mcita {
     margin-bottom: 10px;
+}
+
+.waving-hand {
+    height: 30px;
+    width: 30px;
+    display: block; /* Rimuove lo spazio extra sotto l'immagine */
+    transform: scaleX(-1);
 }
